--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^3.6.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.15"
-  },
-  "devDependencies": {
-    "@types/node": "^16.11.12",
-    "prisma": "^3.6.0",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.3"
-  },
-  "type": "module"
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "src/index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon src/index.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@graphql-tools/schema": "^8.3.1",
+		"@prisma/client": "^3.6.0",
+		"apollo-server-express": "^3.6.1",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"graphql": "^16.2.0",
+		"graphql-subscriptions": "^2.0.0",
+		"graphql-tools": "^8.2.0",
+		"nodemon": "^2.0.15",
+		"subscriptions-transport-ws": "^0.11.0",
+		"typescript": "^4.5.4"
+	},
+	"devDependencies": {
+		"@types/node": "^16.11.12",
+		"prisma": "^3.6.0",
+		"ts-node": "^10.4.0"
+	},
+	"type": "module"
 }
